--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         
         <!-- High-Value Cores -->
         <div class="input-group">
-            <h3>High-Value Cores</h3>
-            <input type="number" id="core1" placeholder="Core 1 (ex)" value="64">
-            <input type="number" id="core2" placeholder="Core 2 (ex)" value="41">
-            <input type="number" id="core3" placeholder="Core 3 (ex)" value="412">
+            <h3>High-Value Cores - Rarity , Mana , All Res 3/15</h3>
+            <input type="number" id="core1" placeholder="Core 1 (ex)" value="413">
+            <input type="number" id="core2" placeholder="Core 2 (ex)" value="64">
+            <input type="number" id="core3" placeholder="Core 3 (ex)" value="42">
         </div>
 
         <!-- Low-Value Core -->
         <div class="input-group">
-            <h3>Low-Value Core</h3>
+            <h3>Low-Value Core - the rest share the same value 12/15</h3>
             <input type="number" id="lowValue" placeholder="Value (ex)" value="9">
         </div>
 
